<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="profile_image">Profile Image</string>
    <string name="twitter_screen_name">\@katiesmillie</string>
    <string name="tweet_text">
        Why can\'t the worlds greatest minds solve the mystery of consciousness?
        | Oliver Burkeman http://t.co/tdDWtWn8UD via @instapaper
    </string>
    <string name="twitter_name">Katie Smillie</string>
    <string name="tweet_relative_timestamp">12 minutes ago</string>
    <string name="action_settings">Settings</string>
    <string name="action_compose_tweet">Compose Tweet</string>
    <string name="compose_tweet_hint">What\'s happening?</string>
    <string name="compose_tweet">TWEET</string>
    <string name="cancel_tweet">CANCEL</string>
    <string name="action_profile">View Profile</string>
    <string name="profile_tag_line">Old account for testing</string>
    <string name="profile_followers">5 Followers</string>
    <string name="profile_following">5 Following</string>

</resources>