<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.simpletwitter.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlUserHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="@dimen/profile_profile_size"
            android:layout_height="@dimen/profile_profile_size"
            tools:src="@drawable/ic_launcher"
            android:contentDescription="@string/profile_image"
            android:id="@+id/ivProfileImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="@dimen/profile_right_margin"
            android:layout_marginEnd="@dimen/profile_right_margin"/>

        <TextView
            tools:text="@string/twitter_name"
            android:textSize="@dimen/profile_twitter_name_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"/>

        <TextView
            tools:text="@string/profile_tag_line"
            android:textSize="@dimen/profile_tag_line_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTagLine"
            android:layout_below="@+id/tvName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/rlUserHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/profile_followers"
            android:layout_marginRight="@dimen/profile_right_margin"
            android:layout_marginEnd="@dimen/profile_right_margin"/>

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/profile_following"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/flContainer"
        android:layout_below="@+id/llCounts">

    </FrameLayout>

</RelativeLayout>
