<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_compose_tweet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.simpletwitter.ComposeTweetActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/tweet_max_length"
        app:counterTextAppearance="@style/counterText"
        app:counterOverflowTextAppearance="@style/counterOverride"
        android:layout_alignParentTop="true"
        android:id="@+id/tilText"
        android:layout_above="@+id/btnCancel">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/compose_tweet_text_height"
            android:inputType="textMultiLine"
            android:hint="@string/compose_tweet_hint"
            android:gravity="top"
            android:layout_alignParentTop="true"
            android:id="@+id/etText"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/cancel_tweet"
        android:layout_width="@dimen/compose_tweet_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnCancel"
        android:onClick="onCancel"/>

    <Button
        android:text="@string/compose_tweet"
        android:layout_width="@dimen/compose_tweet_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnTweet"
        android:onClick="onTweet"/>
</RelativeLayout>
